# hasquelle

./: README.md  hasquelle.cabal
app/: Main.hs
assets/: dictionary.txt  lancerHasquelle  lassHäskellLaufen  wörterbuch.txt  Словарь.txt  запуститьХаскел
src/: Lib.hs
test/: bonjour_monde.hsq  hallo_welt.häs  hello_world.hs  result.hs  temp.hs  test.hs  test2.hs  ПриветМир.хс
