name:                hasquelle
version:             0.1.0.0
synopsis:            Haskell translator
description:         Please see README.md
homepage:            https://github.com/lamarqua/hasquelle
license:             BSD3
license-file:        LICENSE
author:              Annie Cherkaev & Adrien Lamarque
maintainer:          example@example.com
copyright:           2016 La compagnie Hasquelle
category:            Amusant
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , parsec
  default-language:    Haskell2010

executable hasquelle
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hasquelle
  default-language:    Haskell2010

test-suite hasquelle-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hasquelle
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hasquelle
